# fg-funkprog

./: .gitignore  README.md  package-lock.json  package.json
utils/: createMockData.ts
workshop/: Oppgaver.md  constants.ts  createMockData.ts  transactions.ts  types.ts
workshop/01-pure-functions/: pure-functions.test.ts  pure-functions.ts
workshop/02-higher-order-functions/: higher-order-functions.test.ts  higher-order-functions.ts
workshop/02-higher-order-functions/__spoilers/: dontopen.ts
workshop/03-currying-partial-application/: currying-partial-application.test.ts  currying-partial-application.ts
workshop/03-currying-partial-application/__spoilers/: dontopen.ts
workshop/04-compose/: compose.test.ts  compose.ts
workshop/04-compose/__spoilers/: dontopen.ts
workshop/05-algebraic-data-types/: algebraic-datatypes.test.ts  algebraic-datatypes.ts
workshop/data/: transactions.json  transactions.ts
workshop/helpers/: generateTestTransaction.ts
workshop/oppgaver/01-pure-functions/: pure-functions.test.ts  pure-functions.ts
workshop/oppgaver/02-higher-order-functions/: higher-order-functions.test.ts  higher-order-functions.ts
workshop/oppgaver/02-higher-order-functions/__spoilers/: dontopen.ts
workshop/oppgaver/03-currying-partial-application/: currying-partial-application.test.ts  currying-partial-application.ts
workshop/oppgaver/04-compose/: compose.test.ts  compose.ts
workshop/oppgaver/05-algebraic-data-types/: algebraic-datatypes.ts  algebraic.ts
workshop/oppgaver/05-typeclasses/: typeclasses.ts
workshop/oppgaver/06-typeclasses/: typeclasses.ts
ws-haskell/: CHANGELOG.md  ws-haskell.cabal
ws-haskell/__spoilers/: Compose.hs  CurryingPartialApplication.hs  HigherOrderFunctions.hs  PureFunctions.hs
ws-haskell/_spoilers/: Compose.hs
ws-haskell/lib/: Compose.hs  Currency.hs  CurryingPartialApplication.hs  HigherOrderFunctions.hs  PureFunctions.hs  Transaction.hs
ws-haskell/tests/: ComposeTests.hs  CurryingPartialApplicationTests.hs  HigherOrderFunctionsTests.hs  PureFunctionsTest.hs
(+2 files in other folders)
