cabal-version:      2.4
name:               ws-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mikael Solstad
maintainer:         mikaelrinosolstad@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library basic-sum-lib
    exposed-modules: PureFunctions, Currency, Transaction, HigherOrderFunctions, CurryingPartialApplication, Compose
    hs-source-dirs: lib
    build-depends:
        base ^>=4.16.4.0,
        time ^>=1.11.1.1
    default-language: Haskell2010

executable ws-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite PureFunctions
    type: exitcode-stdio-1.0
    main-is: PureFunctionsTest.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, basic-sum-lib
    hs-source-dirs: tests
    default-language: Haskell2010

test-suite HigherOrderFunctions
    type: exitcode-stdio-1.0
    main-is: HigherOrderFunctionsTests.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, basic-sum-lib
    hs-source-dirs: tests
    default-language: Haskell2010

test-suite CurryingPartialApplication
    type: exitcode-stdio-1.0
    main-is: CurryingPartialApplicationTests.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, basic-sum-lib
    hs-source-dirs: tests
    default-language: Haskell2010

test-suite Composse
    type: exitcode-stdio-1.0
    main-is: ComposeTests.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, basic-sum-lib
    hs-source-dirs: tests
    default-language: Haskell2010
